# securerx

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: ci.yml
crates/securerx-api/: Cargo.toml  Dockerfile
crates/securerx-api/src/: handlers.rs  main.rs
crates/securerx-cli/: Cargo.toml
crates/securerx-cli/src/: main.rs
crates/securerx-core/: Cargo.toml
crates/securerx-core/src/: block.rs  blockchain.rs  crypto.rs  lib.rs  transaction.rs
crates/securerx-node/: Cargo.toml  Dockerfile
crates/securerx-node/src/: config.rs  lib.rs  main.rs  metrics.rs  network.rs  node.rs
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json
frontend/src/: App.jsx  index.css
frontend/src/components/: BlockList.jsx  Dashboard.jsx  Header.jsx  NodeStatus.jsx  PrescriptionForm.jsx
frontend/src/pages/: Home.jsx  Nodes.jsx  Overview.jsx  SubmitPrescription.jsx  Transactions.jsx
frontend/src/services/: api.js
monitoring/: prometheus.yml
monitoring/alerts/: rules.yml
monitoring/grafana/dashboards/: blockchain_dashboard.json
tests/: Cargo.toml  test_harness.rs
tests/load/: Dockerfile  load_test.js
