[package]
name = "securerx-api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6"
tokio = { version = "1.39", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json", "blocking"] }
securerx-core = { path = "../securerx-core" }

[dev-dependencies]
tower = "0.4"
tower-http = { version = "0.4", features = ["util"] }
