[package]
name = "securerx-node"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.39", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
axum = "0.6"
prometheus = "0.14"
lazy_static = "1.4"
hyper = { version = "0.14", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "blocking"] }
securerx-core = { path = "../securerx-core" }
